<resources>
    <string name="app_name">Visiting Card</string>
    <string name="shaikh_faisal_hosssain">Shaikh Faisal Hosssain</string>
    <string name="senior_software_engineer_android_ios">Senior Software Engineer(Android, iOS)</string>
    <string name="nybsys_limited">Nybsys Limited</string>
    <string name="_8801683864835">+8801683864835</string>
    <string name="faisal_hossain_pk_gmail_com">faisal.hossain.pk@gmail.com</string>
    <string name="https_www_linkedin_com_in_shaikh_faisal_hossain_68aa19118">https://www.linkedin.com/in/shaikh-faisal-hossain-68aa19118</string>
    <string name="https_github_com_resilientbd">https://github.com/resilientbd</string>
</resources>