<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_color"
        tools:context=".MainActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_350"
            android:background="@color/white"
            android:elevation="@dimen/dp_12"
            android:padding="@dimen/dp_4"
            app:cardCornerRadius="@dimen/dp_8"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="@dimen/dp_124"
                    android:layout_height="@dimen/dp_124"
                    android:elevation="@dimen/dp_12"
                    android:src="@drawable/faisal"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="@dimen/dp_2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_12"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/shaikh_faisal_hosssain"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_12"
                    app:layout_constraintEnd_toEndOf="@+id/profile_image"
                    app:layout_constraintStart_toStartOf="@+id/profile_image"
                    app:layout_constraintTop_toBottomOf="@+id/profile_image" />

                <TextView
                    android:id="@+id/profile_designation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/senior_software_engineer_android_ios"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="@+id/profile_name"
                    app:layout_constraintStart_toStartOf="@+id/profile_name"
                    app:layout_constraintTop_toBottomOf="@+id/profile_name" />

                <TextView
                    android:id="@+id/profile_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_12"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/nybsys_limited"
                    android:textAlignment="center"
                    android:textColor="@color/blue"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/profile_designation"
                    app:layout_constraintStart_toStartOf="@+id/profile_designation"
                    app:layout_constraintTop_toBottomOf="@+id/profile_designation" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_64"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_12"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:layout_marginEnd="@dimen/dp_64"
                app:civ_border_color="@color/white"
                app:civ_border_width="@dimen/dp_2"
                android:src="@drawable/phone" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8801683864835"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_64"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_12"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/layout1">


            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                app:civ_border_color="@color/white"
                app:civ_border_width="@dimen/dp_2"
                android:src="@drawable/gmail" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_64"
                android:text="@string/faisal_hossain_pk_gmail_com"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_64"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_12"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/layout2">


            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:layout_marginEnd="@dimen/dp_64"
                app:civ_border_color="@color/white"
                app:civ_border_width="@dimen/dp_2"
                android:src="@drawable/linkedin" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/https_www_linkedin_com_in_shaikh_faisal_hossain_68aa19118"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_64"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_12"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/layout3">


            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:layout_marginEnd="@dimen/dp_64"
                app:civ_border_color="@color/white"
                app:civ_border_width="@dimen/dp_2"
                android:src="@drawable/github" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/https_github_com_resilientbd"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>